--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-the-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--5">Human Rights Council: 17th Session of the Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/228522.es">David Muñoz y Simon Manley mano a mano en los fogones</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/290702.ja">英国による健康保険付加料の導入</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/263031.es-419">Términos y condiciones del concurso #MusicIsGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/doha-college-opens-additional-campus">Doha College opens additional campus</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/295678.pt">#LOVEisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/263388.zh-tw">2014 台灣歐盟司法交流計畫即將在下週舉行</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192253.he">סגן שר החוץ הבריטי מגנה את רצח החיילים הישראלים</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/293342.ja">英国自動車フォーラムおよびネットワーキングレセプションのご案内</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/st-davids-day-declaracion-ministro-principal-de-gales">St. Davids Day: Declaración Ministro Principal de Gales</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--4">Turks and Caicos post Cabinet update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/293828.es-419">Call for Security and Justice Concept Bids</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171845.es-419">G8: Oportunidades para todos, incluyendo Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284868.es-419">ProInversión inicia capacitación a gobiernos regionales y locales en APP</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--36">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/ukuzbekistan-bilateral-relations--2">UK/Uzbekistan Bilateral Relations</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
