--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.dorsetforyou.com/east" class="govuk-link">East Dorset District Council</a></li>
-      <li><a href="http://www.tamworth.gov.uk" class="govuk-link">Tamworth Borough Council</a></li>
-      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
-      <li><a href="http://www.redbridge.gov.uk/" class="govuk-link">London Borough of Redbridge Council</a></li>
-      <li><a href="http://www.havant.gov.uk" class="govuk-link">Havant Borough Council</a></li>
-      <li><a href="https://www.ncsc.gov.uk" class="govuk-link">National Cyber Security Centre</a></li>
-      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
-      <li><a href="http://www.basingstoke.gov.uk" class="govuk-link">Basingstoke and Deane Borough Council</a></li>
-      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
+      <li><a href="http://www.lancashire.gov.uk/" class="govuk-link">Lancashire County Council</a></li>
       <li><a href="http://www.derbyshire.gov.uk" class="govuk-link">Derbyshire County Council</a></li>
+      <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
+      <li><a href="http://www.parliament.uk/business/publications/hansard/" class="govuk-link">Hansard - UK Parliament</a></li>
+      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
+      <li><a href="http://www.cookstown.gov.uk/" class="govuk-link">Cookstown District Council</a></li>
+      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
+      <li><a href="http://www.chichester.gov.uk" class="govuk-link">Chichester District Council</a></li>
+      <li><a href="http://www.bromsgrove.gov.uk" class="govuk-link">Bromsgrove District Council</a></li>
+      <li><a href="http://www.canterbury.gov.uk" class="govuk-link">Canterbury City Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
