--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/246679.es-419">Aviation security update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/269052.es-419">Referentes locales compartieron sus experiencias sobre liderazgo en las Chevening TALKS</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/263031.es-419">Términos y condiciones del concurso #MusicIsGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/293828.es-419">Call for Security and Justice Concept Bids</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286926.zh">英國更換簽證語言測驗機構</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-human-rights-and-democracy-fund-bid-round-2014-2015--2">The Human Rights and Democracy Fund - Bid Round 2014-2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/high-level-uk-ghana-partnership-to-boost-trade-and-jobs">High Level UK-Ghana partnership to boost trade and jobs</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/212474.ja">G8認知症サミットが開催されました</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/259217.pt">Britânicos visitam RS em busca de empreendedores e investidores</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/174063.pt">VisitBritain anuncia parceria com Rock in Rio</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/st-davids-day-declaracion-ministro-principal-de-gales">St. Davids Day: Declaración Ministro Principal de Gales</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/lietuvos-pirmininkavimas-es-tarybai-keli-faktai--2">Lietuvos pirmininkavimas ES Tarybai: keli faktai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/korea-celebrates-british-designers-and-artists-at-gwangju-biennale--2">Korea celebrates British designers and artists at Gwangju Biennale</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/disruption-to-emergency-contact-numbers-for-consular-assistance--3">Disruption to emergency contact numbers for consular assistance in Portugal</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294171.es-419">Ministro Británico de Estado para América Latina felicita al nuevo Vicepresidente de Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/farewell-happy-hour-to-celebrate-20162017-chevening-scholars">Farewell ‘happy hour’ to celebrate 2016/2017 Chevening scholars</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
