--- a/document-types/place.html
+++ b/document-types/place.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: place</h1>
 
-  <p>There are <strong>19</strong> pages with document type
+  <p>There are <strong>20</strong> pages with document type
 &lsquo;place&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -366,11 +366,11 @@
 <li><a href="https://www.gov.uk/find-theory-test-centre">Find a theory test centre</a></li>
 <li><a href="https://www.gov.uk/id-scan-eu-settlement-scheme">Where to scan your ID document for the EU Settlement Scheme</a></li>
 <li><a href="https://www.gov.uk/find-motorcycle-training">Find a motorcycle or moped CBT course</a></li>
+<li><a href="https://www.gov.uk/find-regional-passport-office">Find a passport office for your Fast Track or Premium appointment</a></li>
 <li><a href="https://www.gov.uk/health-protection-team">Find your local health protection team in England</a></li>
 <li><a href="https://www.gov.uk/disabled-students-allowances-assessment-centre">Find a Disabled Students&rsquo; Allowances assessment centre</a></li>
 <li><a href="https://www.gov.uk/report-child-abuse-to-local-council">Report child abuse to a local council</a></li>
 <li><a href="https://www.gov.uk/find-vehicle-scrapyard">Find a vehicle scrapyard</a></li>
-<li><a href="https://www.gov.uk/find-driving-instructor-training">Find driving instructor training courses</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=place&amp;count=10">Source query from Search API</a></p>
 
