--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.arun.gov.uk/">Arun District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.plymouth.gov.uk">Plymouth City Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.shetland.gov.uk">Shetland Islands Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.southhams.gov.uk">South Hams District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oadby-wigston.gov.uk">Oadby and Wigston Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.maidstone.gov.uk/">Maidstone Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.flintshire.gov.uk">Flintshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.winchester.gov.uk">Winchester City Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/east">East Dorset District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.basingstoke.gov.uk">Basingstoke and Deane Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.arun.gov.uk/">Arun District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.centralbedfordshire.gov.uk/">Central Bedfordshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.adur-worthing.gov.uk/">Adur &amp; Worthing Councils</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
