--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
-      <li><a href="https://census.gov.uk/" class="govuk-link">Census 2021</a></li>
-      <li><a href="http://www.whitehorsedc.gov.uk" class="govuk-link">Vale of White Horse District Council</a></li>
-      <li><a href="http://www.centralbedfordshire.gov.uk/" class="govuk-link">Central Bedfordshire Council</a></li>
-      <li><a href="http://www.dorsetforyou.com/east" class="govuk-link">East Dorset District Council</a></li>
+      <li><a href="http://www.arun.gov.uk/" class="govuk-link">Arun District Council</a></li>
+      <li><a href="http://www.plymouth.gov.uk" class="govuk-link">Plymouth City Council</a></li>
+      <li><a href="http://www.shetland.gov.uk" class="govuk-link">Shetland Islands Council</a></li>
+      <li><a href="http://www.southhams.gov.uk" class="govuk-link">South Hams District Council</a></li>
+      <li><a href="http://www.oadby-wigston.gov.uk" class="govuk-link">Oadby and Wigston Borough Council</a></li>
       <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
-      <li><a href="http://www.lancashire.gov.uk/" class="govuk-link">Lancashire County Council</a></li>
-      <li><a href="http://www.justice.gov.uk/courts/procedure-rules/family" class="govuk-link">Family Procedure Rules</a></li>
-      <li><a href="http://www.derbyshire.gov.uk" class="govuk-link">Derbyshire County Council</a></li>
-      <li><a href="http://www.rbkc.gov.uk/" class="govuk-link">Royal Borough of Kensington and Chelsea Council</a></li>
+      <li><a href="http://www.maidstone.gov.uk/" class="govuk-link">Maidstone Borough Council</a></li>
+      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
+      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/east" class="govuk-link">East Dorset District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
