--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/police-conference-opening">Police conference opening</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-uk-visa-customers-in-kazakhstan--2">Important notice for UK visa customers in Kazakhstan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-trade-and-investment-announcements-highlight-strength-of-uk-taiwan-bilateral-relations--2">New trade and investment announcements highlight strength of UK-Taiwan bilateral relations</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/173244.lt">Lietuva perėmė Europos Sąjungos vairą</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/--16">Ο Βρετανός Πρέσβης Τζων Κίττμερ στην Κρήτη</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/295391.es-419">La Embajada Británica celebra en junio el Mes Europeo del Clima en Buenos Aires</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/247944.it">L’Italia agli Invictus Games</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/297977.pt">HANGOUT #UKINBRAZIL</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/solidarity-with-the-syrian-people">Solidarity with the Syrian People</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--2">British expatriates - it’s your vote, don’t lose it</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/remembrance-sunday">Remembrance Sunday</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/293342.ja">英国自動車フォーラムおよびネットワーキングレセプションのご案内</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/173244.lt">Lietuva perėmė Europos Sąjungos vairą</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284868.es-419">ProInversión inicia capacitación a gobiernos regionales y locales en APP</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/solomon-islands-humanitarian-aid-for-tsunami-hit-islanders">Solomon Islands: Humanitarian aid for tsunami-hit islanders</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
